# structured-typing

./: CMakeLists.txt  LICENSE  bench.sh  libstructured.cpp  libstructured.h  libtemplate.h  libvirtual.cpp  libvirtual.h  structured.cpp  template.cpp  unity_structured.cpp  unity_virtual.cpp  virtual.cpp
complete/: structured.cpp  template.cpp  virtual.cpp
